Agentforce/force-app/main/default/objects/Contract__c/fields/External_Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Contract_ID__c</fullName>
    <description>Used to identify Contracts within external systems</description>
    <externalId>true</externalId>
    <inlineHelpText>External Contract ID/Reference</inlineHelpText>
    <label>External Contract ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>