Agentforce/force-app/main/default/objects/Contract__c/fields/File_Storage_URL__c.field-meta.xml
<CustomField>
    <fullName>File_Storage_URL__c</fullName>
    <description>AD-135 to store a URL against the contract which contains a link to a file storage location</description>
    <label>File Storage URL</label>
    <type>Url</type>
</CustomField>