Agentforce/force-app/main/default/objects/Contract__c/fields/Financial_Penalties__c.field-meta.xml
<CustomField>
    <fullName>Financial_Penalties__c</fullName>
    <label>Financial Penalties</label>
    <type>TextArea</type>
</CustomField>