Agentforce/force-app/main/default/objects/Contract__c/fields/Financial_Risk_Comment__c.field-meta.xml
<CustomField>
    <fullName>Financial_Risk_Comment__c</fullName>
    <label>Financial Risk Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>