Agentforce/force-app/main/default/objects/Contract__c/fields/Financial_Risk_Probability__c.field-meta.xml
<CustomField>
    <fullName>Financial_Risk_Probability__c</fullName>
    <description>AD-844 likelihood of the financial risk identified occurring</description>
    <label>Financial Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Risk_Likelihood</valueSetName>
    </valueSet>
</CustomField>