Agentforce/force-app/main/default/objects/Contract__c/fields/First_Services_Mobilised__c.field-meta.xml
<CustomField>
    <fullName>First_Services_Mobilised__c</fullName>
    <label>First Services Mobilised</label>
    <type>Date</type>
</CustomField>