Agentforce/force-app/main/default/objects/Contract__c/fields/GM_Percent__c.field-meta.xml
<CustomField>
    <fullName>GM_Percent__c</fullName>
    <label>GM %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>