Agentforce/force-app/main/default/objects/Contract__c/fields/H_S_Risk_Comment__c.field-meta.xml
<CustomField>
    <fullName>H_S_Risk_Comment__c</fullName>
    <label>H&amp;S Risk Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>