Agentforce/force-app/main/default/objects/Contract__c/fields/H_S_Risk_Probability__c.field-meta.xml
<CustomField>
    <fullName>H_S_Risk_Probability__c</fullName>
    <description>AD-841 to capture the likelihood of the H&amp;S risk occurring</description>
    <label>H&amp;S Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Risk_Likelihood</valueSetName>
    </valueSet>
</CustomField>