Agentforce/force-app/main/default/objects/Contract__c/fields/Initial_OpEx__c.field-meta.xml
<CustomField>
    <fullName>Initial_OpEx__c</fullName>
    <label>Initial OpEx</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>