Agentforce/force-app/main/default/objects/Contract__c/fields/Initial_Social_Charges_Percent__c.field-meta.xml
<CustomField>
    <fullName>Initial_Social_Charges_Percent__c</fullName>
    <label>Initial Social Charges %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>