Agentforce/force-app/main/default/objects/Contract__c/fields/Initial_Subcontracting_Margin__c.field-meta.xml
<CustomField>
    <fullName>Initial_Subcontracting_Margin__c</fullName>
    <label>Initial Subcontracting Margin (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>