Agentforce/force-app/main/default/objects/Contract__c/fields/Invoice_Detail__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Detail__c</fullName>
    <label>Invoice Detail</label>
    <type>TextArea</type>
</CustomField>