Agentforce/force-app/main/default/objects/Contract__c/fields/ITT__c.field-meta.xml
<CustomField>
    <fullName>ITT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ITT</label>
    <type>Checkbox</type>
</CustomField>