Agentforce/force-app/main/default/objects/Contract__c/fields/Key_Contact__c.field-meta.xml
<CustomField>
    <fullName>Key_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AD-737 to create a &apos;re-bid&apos; Opportunity prior to the end of the &apos;Contract End Date&apos;</description>
    <label>Key Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Key Contact)</relationshipLabel>
    <relationshipName>Contract</relationshipName>
    <type>Lookup</type>
</CustomField>