Agentforce/force-app/main/default/objects/Contract__c/fields/Last_Indexation__c.field-meta.xml
<CustomField>
    <fullName>Last_Indexation__c</fullName>
    <label>Last Indexation %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>