Agentforce/force-app/main/default/objects/Contract__c/fields/Last_Price_Increase__c.field-meta.xml
<CustomField>
    <fullName>Last_Price_Increase__c</fullName>
    <label>Last Price Increase</label>
    <type>Date</type>
</CustomField>