Agentforce/force-app/main/default/objects/Contract__c/fields/Latest_Contract_Update__c.field-meta.xml
<CustomField>
    <fullName>Latest_Contract_Update__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Contract Update</label>
    <referenceTo>Contract_Update__c</referenceTo>
    <relationshipLabel>Contracts (Latest Contract Update)</relationshipLabel>
    <relationshipName>Contracts_Latest_Update</relationshipName>
    <type>Lookup</type>
</CustomField>