Agentforce/force-app/main/default/objects/Contract__c/fields/Latest_NPS__c.field-meta.xml
<CustomField>
    <fullName>Latest_NPS__c</fullName>
    <label>Latest NPS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>