Agentforce/force-app/main/default/objects/Contract__c/fields/Latest_NPS_Visit__c.field-meta.xml
<CustomField>
    <fullName>Latest_NPS_Visit__c</fullName>
    <formula>DATEVALUE(Account__r.Latest_NPS__r.Visit_Finish__c)</formula>
    <label>Latest NPS Visit</label>
    <type>Date</type>
</CustomField>