Agentforce/force-app/main/default/objects/Contract__c/fields/Latest_Risk_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Latest_Risk_Assessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Risk Assessment</label>
    <referenceTo>Risk_Assessment__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>