Agentforce/force-app/main/default/objects/Contract__c/fields/Latest_Risk_Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Risk_Assessment_Date__c</fullName>
    <formula>Latest_Risk_Assessment__r.Submitted__c</formula>
    <label>Latest Risk Assessment Date</label>
    <type>Date</type>
</CustomField>