Agentforce/force-app/main/default/objects/Contract__c/fields/Legacy_AS_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Legacy_AS_Billing_Address__c</fullName>
    <label>Legacy AS Billing Address</label>
    <type>Address</type>
</CustomField>