Agentforce/force-app/main/default/objects/Contract__c/fields/Legacy_AS_Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_AS_Contract_ID__c</fullName>
    <label>Legacy AS Contract ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>