Agentforce/force-app/main/default/objects/Contract__c/fields/Local_customer__c.field-meta.xml
<CustomField>
    <fullName>Local_customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Local customer</label>
    <type>Checkbox</type>
</CustomField>