Agentforce/force-app/main/default/objects/Contract__c/fields/Managing_Agent__c.field-meta.xml
<CustomField>
    <fullName>Managing_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AD-750 Track Managing Agents associated to Contracts</description>
    <label>Managing Agent</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Managing_Agent__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts (Managing Agent)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>