Agentforce/force-app/main/default/objects/Contract__c/fields/Mobilisation_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Mobilisation_Complete_Date__c</fullName>
    <description>AD-277 to record the mobilisation complete date</description>
    <label>Mobilisation Complete Date</label>
    <type>Date</type>
</CustomField>