Agentforce/force-app/main/default/objects/Contract__c/fields/Months_until_End_of_Contract__c.field-meta.xml
<CustomField>
    <fullName>Months_until_End_of_Contract__c</fullName>
    <formula>IF(
				Contract_End_Date__c &lt; TODAY(),0,
				MONTH( Contract_End_Date__c ) - MONTH( TODAY()) + 12 * (YEAR(Contract_End_Date__c) - YEAR( TODAY() )
																																																					)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Months until End of Contract</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>