Agentforce/force-app/main/default/objects/Contract__c/fields/Next_Price_Increase__c.field-meta.xml
<CustomField>
    <fullName>Next_Price_Increase__c</fullName>
    <label>Next Price Increase</label>
    <type>Date</type>
</CustomField>