Agentforce/force-app/main/default/objects/Contract__c/fields/No_of_Active_Contract_Lines__c.field-meta.xml
<CustomField>
    <fullName>No_of_Active_Contract_Lines__c</fullName>
    <label># Active Contract Lines</label>
    <summaryFilterItems>
        <field>Contract_Line_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>Contract_Line_Item__c.Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>