Agentforce/force-app/main/default/objects/Contract__c/fields/No_of_Attachments__c.field-meta.xml
<CustomField>
    <fullName>No_of_Attachments__c</fullName>
    <label># Attachments</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>