Agentforce/force-app/main/default/objects/Contract__c/fields/No_of_Commitments__c.field-meta.xml
<CustomField>
    <fullName>No_of_Commitments__c</fullName>
    <description>Total number of Commitments</description>
    <formula>No_of_In_Progress_Commitments__c +  No_of_Overdue_Commitments__c + No_of_Completed_Commitments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Commitments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>