Agentforce/force-app/main/default/objects/Contract__c/fields/No_of_Completed_Commitments__c.field-meta.xml
<CustomField>
    <fullName>No_of_Completed_Commitments__c</fullName>
    <label># Completed Commitments</label>
    <summaryFilterItems>
        <field>Commitment__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Commitment__c.Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>