Agentforce/force-app/main/default/objects/Contract__c/fields/No_of_Contract_Lines__c.field-meta.xml
<CustomField>
    <fullName>No_of_Contract_Lines__c</fullName>
    <label># Contract Lines</label>
    <summaryForeignKey>Contract_Line_Item__c.Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>