Agentforce/force-app/main/default/objects/Contract__c/fields/No_of_Contract_Updates__c.field-meta.xml
<CustomField>
    <fullName>No_of_Contract_Updates__c</fullName>
    <label># Contract Updates</label>
    <summaryForeignKey>Contract_Update__c.Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>