Agentforce/force-app/main/default/objects/Contract__c/fields/No_of_Service_Lines_Terminated__c.field-meta.xml
<CustomField>
    <fullName>No_of_Service_Lines_Terminated__c</fullName>
    <label># Service Lines Terminated</label>
    <summaryFilterItems>
        <field>Contract_Line_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Terminated</value>
    </summaryFilterItems>
    <summaryForeignKey>Contract_Line_Item__c.Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>