Agentforce/force-app/main/default/objects/Contract__c/fields/No_of_Services__c.field-meta.xml
<CustomField>
    <fullName>No_of_Services__c</fullName>
    <label># Services</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>