Agentforce/force-app/main/default/objects/Contract__c/fields/No_of_Sites__c.field-meta.xml
<CustomField>
    <fullName>No_of_Sites__c</fullName>
    <formula>Account__r.Number_of_Sites__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Sites</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>