Agentforce/force-app/main/default/objects/Contract__c/fields/OCS_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>OCS_Signed_Date__c</fullName>
    <label>OCS Signed Date</label>
    <type>Date</type>
</CustomField>