Agentforce/force-app/main/default/objects/Contract__c/fields/Open_Rebid_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Open_Rebid_Opportunity__c</fullName>
    <formula>IF(Count_of_Open_Rebid_Opportunities__c &gt; 0, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Rebid Opportunity</label>
    <type>Checkbox</type>
</CustomField>