Agentforce/force-app/main/default/objects/Contract__c/fields/Operational_Lead__c.field-meta.xml
<CustomField>
    <fullName>Operational_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operational Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>