Agentforce/force-app/main/default/objects/Contract__c/fields/Operational_Risk_Comment__c.field-meta.xml
<CustomField>
    <fullName>Operational_Risk_Comment__c</fullName>
    <label>Operational Risk Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>