Agentforce/force-app/main/default/objects/Contract__c/fields/Operational_Risk_Probability__c.field-meta.xml
<CustomField>
    <fullName>Operational_Risk_Probability__c</fullName>
    <description>AD-835 to capture the probability of the operational risk occurring</description>
    <label>Operational Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Risk_Likelihood</valueSetName>
    </valueSet>
</CustomField>