Agentforce/force-app/main/default/objects/Contract__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AD-736 to create a Contract for &apos;Contractual&apos; Opportunity Product Lines when an Opportunity Stage is &apos;Closed Won&apos; and the Sub-Stage is updated to either &apos;Written Confirmation&apos; or &apos;T&amp;Cs Signed&apos;</description>
    <label>Latest Won Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>