Agentforce/force-app/main/default/objects/Contract__c/fields/Optional_Extension_Months__c.field-meta.xml
<CustomField>
    <fullName>Optional_Extension_Months__c</fullName>
    <label>Optional Extension (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>