Agentforce/force-app/main/default/objects/Contract__c/fields/Original_Contract_Name__c.field-meta.xml
<CustomField>
    <fullName>Original_Contract_Name__c</fullName>
    <label>Original Contract Name</label>
    <type>TextArea</type>
</CustomField>