Agentforce/force-app/main/default/objects/Contract__c/fields/Original_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Original_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contracts (Original Opportunity)</relationshipLabel>
    <relationshipName>Contracts2</relationshipName>
    <type>Lookup</type>
</CustomField>