Agentforce/force-app/main/default/objects/Contract__c/fields/Owner_Region__c.field-meta.xml
<CustomField>
    <fullName>Owner_Region__c</fullName>
    <description>AD-737 to create a &apos;re-bid&apos; Opportunity prior to the end of the &apos;Contract End Date&apos;</description>
    <formula>TEXT(Owner:User.Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Region</label>
    <type>Text</type>
</CustomField>