Agentforce/force-app/main/default/objects/Contract__c/fields/Owner_Team__c.field-meta.xml
<CustomField>
    <fullName>Owner_Team__c</fullName>
    <label>Owner Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Team</valueSetName>
    </valueSet>
</CustomField>