Agentforce/force-app/main/default/objects/Contract__c/fields/Pending_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Pending_Annual_Revenue__c</fullName>
    <inlineHelpText>Annual Revenue of Pending Line Items</inlineHelpText>
    <label>Pending Annual Revenue</label>
    <summarizedField>Contract_Line_Item__c.Value__c</summarizedField>
    <summaryFilterItems>
        <field>Contract_Line_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </summaryFilterItems>
    <summaryForeignKey>Contract_Line_Item__c.Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>