Agentforce/force-app/main/default/objects/Contract__c/fields/People_Risk_Comment__c.field-meta.xml
<CustomField>
    <fullName>People_Risk_Comment__c</fullName>
    <label>People Risk Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>