Agentforce/force-app/main/default/objects/Contract__c/fields/People_Risk_Probability__c.field-meta.xml
<CustomField>
    <fullName>People_Risk_Probability__c</fullName>
    <description>AD-838 to capture the probability of the people risk identified occurring</description>
    <label>People Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Risk_Likelihood</valueSetName>
    </valueSet>
</CustomField>