Agentforce/force-app/main/default/objects/Contract__c/fields/Potential_New_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Potential_New_End_Date__c</fullName>
    <label>Potential New End Date</label>
    <type>Date</type>
</CustomField>