Agentforce/force-app/main/default/objects/Contract__c/fields/Profit_Centre__c.field-meta.xml
<CustomField>
    <fullName>Profit_Centre__c</fullName>
    <label>Profit Centre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>