Agentforce/force-app/main/default/objects/Contract__c/fields/PVS_Sector__c.field-meta.xml
<CustomField>
    <fullName>PVS_Sector__c</fullName>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business_Unit__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aviation</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Destinations</fullName>
            </value>
            <value>
                <fullName>Grocery</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Industries</fullName>
            </value>
            <value>
                <fullName>Ports</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Rail</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Specialist</fullName>
            </value>
            <value>
                <fullName>Venues</fullName>
            </value>
            <value>
                <fullName>Workplace</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>