Agentforce/force-app/main/default/objects/Contract__c/fields/Rebid_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Rebid_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AD-737 to create a &apos;re-bid&apos; Opportunity prior to the end of the &apos;Contract End Date&apos;</description>
    <label>Renewal Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contracts (Rebid Opportunity)</relationshipLabel>
    <relationshipName>RebidContracts</relationshipName>
    <type>Lookup</type>
</CustomField>