Agentforce/force-app/main/default/objects/Contract__c/fields/Recreate_Contract_Lines__c.field-meta.xml
<CustomField>
    <fullName>Recreate_Contract_Lines__c</fullName>
    <formula>Contract_Last_Renewed__c =  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recreate Contract Lines</label>
    <type>Checkbox</type>
</CustomField>