Agentforce/force-app/main/default/objects/Contract__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <inlineHelpText>The value is used help you identify the Contract and also in the automatic naming of the Contract.</inlineHelpText>
    <label>Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>