Agentforce/force-app/main/default/objects/Contract__c/fields/Relationship_Risk_Comment__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Risk_Comment__c</fullName>
    <label>Relationship Risk Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>