Agentforce/force-app/main/default/objects/Contract__c/fields/Relationship_Risk_Probability__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Risk_Probability__c</fullName>
    <description>AD-847 to capture the likelihood of the relationship risk occurring</description>
    <label>Relationship Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Risk_Likelihood</valueSetName>
    </valueSet>
</CustomField>