Agentforce/force-app/main/default/objects/Contract__c/fields/Relationship_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Risk_Score__c</fullName>
    <description>AD-851 to understand the overall contract risk rating</description>
    <formula>CASE(TEXT(Relationship_Risk_Probability__c),
&quot;Very Low&quot;, 1,
&quot;Low&quot;, 2,
&quot;Moderate&quot;, 3,
&quot;High&quot;, 4,
&quot;Very High&quot;, 5, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relationship Risk Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>