Agentforce/force-app/main/default/objects/Contract__c/fields/Renewal_Opportunity_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Opportunity_Annual_Revenue__c</fullName>
    <formula>Rebid_Opportunity__r.Amount</formula>
    <label>Renewal Opportunity Annual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>