Agentforce/force-app/main/default/objects/Contract__c/fields/Renewal_Opportunity_Award_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Opportunity_Award_Date__c</fullName>
    <description>Renewal Opportunity Award Date</description>
    <formula>Rebid_Opportunity__r.CloseDate</formula>
    <label>Renewal Opportunity Award Date</label>
    <type>Date</type>
</CustomField>