Agentforce/force-app/main/default/objects/Contract__c/fields/Renewal_Opportunity_Contract_Start__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Opportunity_Contract_Start__c</fullName>
    <formula>Rebid_Opportunity__r.Contract_Start_Date__c</formula>
    <label>Renewal Opportunity Contract Start</label>
    <type>Date</type>
</CustomField>