Agentforce/force-app/main/default/objects/Contract__c/fields/Renewal_Opportunity_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Opportunity_Owner_Name__c</fullName>
    <description>Renewal Opportunity Owner Name</description>
    <formula>Rebid_Opportunity__r.Owner_Full_Name__c</formula>
    <label>Renewal Opportunity Owner Name</label>
    <type>Text</type>
</CustomField>