Agentforce/force-app/main/default/objects/Contract__c/fields/Renewal_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Opportunity_Stage__c</fullName>
    <description>Renewal Opportunity Stage</description>
    <formula>TEXT(Rebid_Opportunity__r.StageName)</formula>
    <label>Renewal Opportunity Stage</label>
    <type>Text</type>
</CustomField>