Agentforce/force-app/main/default/objects/Contract__c/fields/Renewal_Opportunity_Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Opportunity_Sub_Stage__c</fullName>
    <description>Renewal Opportunity Sub Stage</description>
    <formula>TEXT(Rebid_Opportunity__r.Sub_Stage__c)</formula>
    <label>Renewal Opportunity Sub Stage</label>
    <type>Text</type>
</CustomField>