Agentforce/force-app/main/default/objects/Contract__c/fields/Renewal_Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Opportunity_Type__c</fullName>
    <formula>TEXT(Rebid_Opportunity__r.Type)</formula>
    <label>Renewal Opportunity Type</label>
    <type>Text</type>
</CustomField>