Agentforce/force-app/main/default/objects/Contract__c/fields/Retention_Lead__c.field-meta.xml
<CustomField>
    <fullName>Retention_Lead__c</fullName>
    <label>Retention Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>