Agentforce/force-app/main/default/objects/Contract__c/fields/Risk_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Risk_Last_Update__c</fullName>
    <label>Risk Last Update</label>
    <type>Date</type>
</CustomField>