Agentforce/force-app/main/default/objects/Contract__c/fields/Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level__c</fullName>
    <description>AD-851 to understand the overall contract risk rating</description>
    <formula>If( OR(Total_Contract_Risk__c &gt;= 25 ),
			IMAGE(&apos;/resource/RAGFlagRed&apos;,&apos; &apos;),

			If(  AND( Total_Contract_Risk__c &gt;=12,Total_Contract_Risk__c &lt;=24),
						IMAGE(&apos;/resource/RAGFlagAmber&apos;,&apos; &apos;),

						If ( ISPICKVAL(Status__c, &apos;Expired&apos;),
										IMAGE(&apos;/resource/RAGFlagGIF&apos;,&apos; &apos;),

										If ( ISPICKVAL(Status__c, &apos;At Risk&apos;),
														IMAGE(&apos;/resource/RAGFlagRed&apos;,&apos; &apos;),

														If(  Total_Contract_Risk__c &lt;= 11,
																	IMAGE(&apos;/resource/RAGFlagGreen&apos;,&apos; &apos;),&quot;None&quot;
																)
													)
									)
					)
			
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Level</label>
    <type>Text</type>
</CustomField>